adds english text and deletes work method block

--- a/public/locales/en/questions.json
+++ b/public/locales/en/questions.json
@@ -1,74 +1,75 @@
 {
   "questions": [
     {
-      "question": "Не могу получить оргазм без вибратора.",
+      "question": "I can't orgasm without a vibrator.",
       "answers": [
-        "И тогда я бы сразу спросила, насколько это вас беспокоит. Сама ситуация очень частая и даже понятная. Вибратор дает стимуляцию, которую воспроизвести в партнёрском сексе, очень сложно. Важнее, какие чувства поднимаются за этим предложением? Если они достаточно сильные и доставляют беспокойство, то можно пойти в переучивание и через техники расширить свой диапазон удовольствия, постепенно переходя со стимуляции вибратора на мануальную стимуляцию или же стимуляцию членом. Но это процесс и процессу нужны ваше ресурсы и время. ",
-        "Если же эти мысли не влияют сильно на качество вашей сексуальной жизни, то в партнерский секс можно добавить стимуляцию вибратором на постоянной основе. Это решение для многих людей.",
-        "Поэтому краткий ответ такой: решение есть, но нужно ли оно вам?"
+        "In that case, I would immediately ask how much it bothers you. The situation itself is very common and understandable. The vibrator provides stimulation that is difficult to reproduce in partner sex. What feelings are behind this statement? If they are strong enough and causing concern, then you can retrain yourself and gradually expand your range of pleasure through special techniques, transitioning from vibrator stimulation to manual stimulation or penile stimulation. But this is a process that takes time and effort. ",
+        "If these thoughts do not significantly affect the quality of your sexual life, then vibrator stimulation can be added to partner sex on a regular basis. This solution works for many people.",
+        "So, in short, the answer is: there is a solution, but do you need it?"
       ]
     },
     {
-      "question": "15 лет вместе, снизилось либидо, шаблонизированный секс, другие мужчины особо фантазию тоже не будоражат. Как выйти из этого замкнутого круга?",
+      "question": "15 years together, decreased libido, stereotyped sex, other men don't particularly excite fantasy either. How to break out of this vicious circle?",
       "answers": [
-        "Это не совсем круг. Скорей всего кривая, которая характерна для очень многих пар, которые давно вместе. Но вы написали, что и другие мужчины особо не будоражат и тогда вопрос: связано ли это с текущим партнёром или именно с вашим либидо.",
-        "Для первого — самый короткий ответ: книга Эстер Перель 'Всегда желанные. Как сохранить страсть в длительных отношениях'. Но будьте готовы взять в фокус ваши сексуальные отношения и уделить им своё время.",
-        "Для второго — немного сложнее, так как нужны дополнительные вопросы. Сохраняются ли мастурбации, есть ли эротические сны, как у вас с жизненной энергией в целом, было ли так всегда или изменения достаточно резкие? Снижение либидо — один из самых частых запросов, причин масса. Но начать всегда можно с главного вопроса: а вам секс зачем?"
+        "It's not exactly a circle. More likely a curve that is typical for many long-term couples. But you mentioned that other men don't particularly excite you either, so the question is: is this related to your current partner or to your own libido.",
+        "If it's the former, the shortest answer would be to read Esther Perel's book 'Mating in Captivity: Unlocking Erotic Intelligence'. But be prepared to focus on your sexual relationships and dedicate time to them.",
+        "If it's the latter, it's a bit more complicated, as additional questions are needed. Do you still masturbate, do you have erotic dreams, how is your overall life energy, has it always been this way or have the changes been quite sudden? Decreased libido is one of the most common issues, with many different reasons behind it. But you can always start with the main question: why do you need sex?"
       ]
     },
     {
-      "question": "Часто снятся эротические сны, но в них всегда много тревоги и никогда не доходит до «конца». От этих снов больше напряжения, чем радости. Это что-то значит?",
+      "question": "I often have erotic dreams, but they are always filled with anxiety and I never reach a 'climax'. These dreams bring more tension than joy. Does this mean something?",
       "answers": [
-        "Сны — это про наши бессознательные процессы, которые не подавляются защитными механизмами и контролем сознания. Поэтому интерпретировать их лучше в совокупности с жизненными событиями. Но если пробовать отвечать на вопрос, то я бы уделила внимание напряжению, о котором вы говорите. Если вы имеете ввиду под 'концом' оргазм, то это достаточно частое явление. Более того именно оргазм во сне, от которого человек чаще просыпается — это как раз более редкое явление, чем просто сильное возбуждение от фантазии. И напряжение — это как естественная реакция от того, что разрядка не произошла. Вы можете подумать, как с этим обращаться именно вам. Можно пробовать реализовать сексуальный потенциал после пробуждения, если желание ещё осталось и если есть такая возможность."
+        "Dreams are about our unconscious processes that are not suppressed by defense mechanisms and conscious control. Therefore, it is best to interpret them in conjunction with life events. But if we try to answer the question, I would pay attention to the tension you are talking about. If by 'climax' you mean orgasm, then it is a quite common phenomenon. Whats more, experiencing an orgasm in a dream, which often wakes a person up, is actually way more rare than just feeling strong excitement from a fantasy. And the tension is a natural reaction to the fact that the release did not happen. You can consider how to handle this specifically for yourself. You might try to fulfill your sexual potential after waking up, if the desire still remains and if it is possible."
       ]
     },
     {
-      "question": "Как увеличить время полового акта с партнером?",
+      "question": "How to extend the time of sexual intercourse with a partner?",
       "answers": [
-        "Здесь не хватает цифр, конечно. Потому что если вы хотите, например, час, то у меня один ответ, а если — в среднем 10-15 минут, то другой. Если мы исключаем органические нарушения и берем ориентир в 10-15 минут, то это метод пунктира. Активная стимуляция должна сменяться таким типом ласк, который притормаживает ваше возбуждение. В этом случае хорошо поможет вообще понимание того, что вас сильно возбуждает, что средне возбуждает, а что совсем тормозит. Это не зависит от того, мужчина вы или женщина. Как только появляется понимание, что скоро наступит точка невозврата, нужно переключаться на другой тип стимуляции — менее триггерный для вашего возбуждения. Здесь точно нужна коммуникация с партнёром, чтобы весь процесс был более понятным и гладким для обеих сторон. Полезное упражнение для пар: взять рисунок тела и на нем отметить эрогенные зоны, которые сильно возбуждают, средне и совсем не возбуждают. Отметить на рисунке свои зоны. А на втором рисунке — зоны партнера. А потом обменяться листочками и обсудить."
+        "We lack some numbers here, of course. What it means is that if you want, for example, an hour, then I have one answer, and if you want an average of 10-15 minutes, then another. If we exclude organic violations and and use 10-15 minute time as a benchmark, then this is the dotted line method. Active stimulation should be replaced by a type of caress  that decreases your arousal. In this case, understanding of what turns you on a lot, what turns you on average, and what slows you down completely will help well. It does not depend on whether you are a man or a woman. As soon as it becomes clear that the point of no return is coming soon, you need to switch to another type of stimulation — less triggering for your arousal. Communication with a partner is definitely needed here, so that the whole process is more understandable and smooth for both sides. Here is a useful exercise for couples: take a body drawing and mark erogenous zones on it, which are highly arousing, medium and not at all exciting and invite your partner to do the same about them.  Then swap your pictures and discuss them."
       ]
     },
     {
-      "question": "Испытываю боли при половом акте",
+      "question": "I experience pain during sexual intercourse",
       "answers": [
-        "Прежде всего нужно исключить органическую причину этого. Если уролог-андролог или гинеколог проверили и сказали, что соматических нарушений нет, то смотрим на другие возможные причины.",
-        "И тут нужны дополнительные вопросы: так было всегда? Если да, то следом идут вопросы про то, как происходит обычно ваш сексуальный контакт, как проходил первый сексуальный опыт, сталкивались ли вы с сексуальным или физическим насилием. ",
-        "Если нет, то после какого раза это стало происходить, есть ли какие-то закономерности.",
-        "Обычно всегда специалисты уточняют про предварительные ласки: достаточно ли их, насколько они вас возбуждают, хватает ли вам смазки для начала проникновения?",
-        "При любом подобном опыте рекомендуется использовать дополнительно лубриканты и уделять отдельное внимание прелюдии."
+        "First of all, it is necessary to rule out any organic cause of this. If a urologist-andrologist or gynecologist has checked and confirmed that there are no somatic disorders, then we might  look at other possible causes.",
+        "One more thing: has this always been the case? If yes, then a few follow-up questions would be about how your usual sexual contact happens, how your first sexual experience went, and if you ever have experienced any sexual or physical violence.",
+        "If no, then we would focus on when this started happening and if there are any patterns to the pain.",
+        "Specialists usually inquire about foreplay: is it sufficient, does it arouse you enough, do you have enough lubrication for penetration to start?",
+        "In any case, it is recommended to use additional lubricants and pay special attention to foreplay."
       ]
     },
     {
-      "question": "Боюсь вступать в сексуальные отношения после неудачного раза ",
+      "question": "I am afraid to enter into sexual relationships after a traumatizing experience.",
       "answers": [
-        "Мне жаль, что вы столкнулись с таким опытом. Не зная деталей сложно предположить, чем именно вызван неудачный опыт, но если он вызывает страх повторения, то там есть с чем работать. Я бы точно порекомендовала разобрать этот вопрос с терапевтом, так как важно снять напряжение и поработать со всеми чувствами, с которыми вы столкнулись. Особенно, если это был ваш первый опыт.",
-        "Удовольствие от секса предполагает доверие партнеру и прежде всего себе. Если вы столкнулись с неудачным опытом, то доверие нарушается. Поэтому важно его вернуть, разобрав всю ситуацию. Вне зависимости от того этот вопрос от мужчины или женщины, страх повторения неудачи может часто преследовать человека. Для мужчины он может проигрываться в сложностях с эрекцией, у женщины — в отсутствии оргазма или сложности с возбуждением. Поэтому если страх сильнее желания, помогите себе и проконсультируйтесь у специалиста."
+        "I am sorry that you have had such an experience. Without knowing the details, it is difficult to speculate on what caused the unsuccessful experience, but if it is causing fear of repetition, then there is something to work on. I would definitely recommend discussing this issue with a therapist, as it is important to release tension and work through all the feelings you have encountered. Especially if it was your first experience.",
+        "Enjoying sex implies trusting your partner and, above all, yourself. If you have had an unsuccessful experience, trust is broken. Therefore, it is important to restore it by understanding the whole situation. Regardless of whether this issue is with a man or a woman, the fear of repeating failure can often haunt a person. For a man, it can manifest in difficulties with erection, for a woman - in the absence of orgasm or difficulties with arousal. So, if fear is stronger than desire, help yourself and seek advice from a specialist."
       ]
     },
     {
-      "question": "Люблю когда секс жестокий, что со мной не так?",
+      "question": "I love it when sex is rough, what's wrong with me?",
       "answers": [
-        "Нужна детализация до понимания уровня жестокости. Заодно держите десяток вопросов, без которых не разобраться. Жестокий секс в фантазиях, или в просматриваемом порно, или в реальном сексе? ",
-        "Доставляет ли вам это удовольствием или больше чувство вины?",
-        "Вы любите жестокость по отношению к себе или по отношению к другому человеку?",
-        "Как именно воспроизводится жестокий сценарий: он меняется или повторяется с одним и тем же сюжетом?",
-        "Так было всегда или желание начало усиливаться после какого-то события?",
-        "Вы хотите это менять или вам комфортно с такими предпочтениями?",
-        "Сохраняется ли у вас возбуждение при сексуальном контакте не сильно выраженной жестокости?",
-        "Вопрос очень объемный. Вне зависимости от того, какие ответы на мои вопросы, важно помнить про культуру согласия и про то, что на любые манипуляции в сексе ваш партнёр (партнёрша) должны быть согласны и осознавать весь процесс и его последствия."
+        "We need more details to understand the level of roughness. And here are ten questions to consider: Is rough sex a fantasy, something you see in porn, or something you experience in real life? ",
+        "Does it bring you pleasure or more of a sense of guilt?",
+        "Do you enjoy being the one treated roughly or seeing someone else treated that way?",
+        "Is the rough scenario always changing or is it repeated with the same plot?",
+        "Has this desire always been present or has it intensified after a particular event?",
+        "Do you want to change this aspect of your preferences or are you comfortable with it?",
+        "Do you still feel aroused during sexual contact that doesn't involve significant roughness?",
+        "This question is quite complex. Regardless of your answers to my questions, it's important to remember the importance of consent culture and that your partner(s) must agree to and be aware of any sexual manipulations and their consequences."
       ]
     },
     {
-      "question": "Моя девушка/парень меня не возбуждают",
+      "question": "My girlfriend/boyfriend doesn't turn me on.",
       "answers": [
-        "Основной вопрос здесь такой и честный ответ выведет на верную дорогу: а вы хотите это изменить?",
-        "Бывает, что человек нас не возбуждает в сексе, потому что он уже не возбуждает нас как партнёр по жизни. Когда у нас есть большое количество сложных эмоцией в его или её отношении, которые мешают возбуждению. ",
-        "Если изменить ситуацию хочется, то нужно углубиться и спросить, а что с вашим возбуждением по отношению к партнёру/партнёрше? Если его нет, то что есть? Это место точно занимает какое-то чувство, которое важно поисследовать.",
-        "Вопросы для вечерней рефлексии:",
-        "А есть ли у вас возбуждение по отношению к другим людям?",
-        "Так было всегда или случилось со временем? ",
-        "Вас не возбуждает обнаженный вид партнёра/партнёрши или процесс секса с ним/с ней? ",
-        "Вы знаете, как партнёру/партнёрше нужно вести себя, чтобы возбуждение вернулось?"
+        "Here is the main question, and an honest answer will lead you in the right direction: do you want to change this?",
+        "It happens so that a person doesn't turn us on sexually because they no longer excite us as a life partner. When we have a lot of complex emotions towards them that interfere with arousal. ",
+        "If you want to change the situation, you need to delve deeper and ask yourself, what about your arousal towards your partner? If it's not there, then what is? There is definitely some feeling occupying that space that is worth exploring.",
+        "Questions for evening reflection:",
+        "Do you have arousal towards other people?",
+        "Do you masturbate? ",
+        "Has it always been this way or has it happened over time?",
+        "Do you not get turned on by seeing your partner naked or during the process of sex with them?",
+        "Do you know how your partner needs to behave in order for arousal to return?"
       ]
     }
   ]
