--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,7 +6,7 @@
   "intro": {
     "subtitle": "Яна Павлюц",
     "title": "психолог - консультант в сексологии",
-    "alt": "Фотография психолога Яны Павлюц"
+    "alt": "портрет психолога Яны Павлюц"
   },
 
   "modalCheck": {
@@ -86,7 +86,7 @@
     "text2": "Форма анонимная, но для ответа вам нужно будет указать почту, на которую вы ожидаете ответ.",
     "text3": "Некоторые ответы я могу публиковать на сайте. Вопрос остается анонимным: без контактов и любой другой персональной информации.",
     "button": "Задать вопрос",
-    "alt": "Фотография психолога Яны Павлюц"
+    "alt": "портрет психолога Яны Павлюц"
   },
 
   "questions": {
