adds EN RU buttons to header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,7 +28,7 @@
     "button": "Sign up",
     "fact1": "My name is Yana Pavlyuts and I help men and women improve their sexual life. I work in a multimodal approach - a method that combines knowledge from different schools of psychology.",
     "fact2": "  I have received training in International Academy of Sexology in the following programs:",
-    "fact2List": ["general sexology", "female sexology", "male sexology"],
+    "fact2List": ["general sexology,", "female sexology,", "male sexology."],
     "fact3": "I have been a member of the Association of Sexologists of the Russian Federation since 2019.",
     "fact4": " I have been in personal therapy for 5 years."
   },
