--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -28,7 +28,7 @@
     "button": "Записаться",
     "fact1": "Меня зовут Яна Павлюц и я помогаю мужчинам и женщинам наладить свою сексуальную жизнь. Работаю в полимодальном подходе — это метод, когда используется комбинированные знания разных школ психологии.",
     "fact2": "Проходила обучение в Международной академии сексологии по программам:",
-    "fact2List": ["общая сексология", "женская сексология", "мужская сексология"],
+    "fact2List": ["общая сексология,", "женская сексология,", "мужская сексология."],
     "fact3": "Состою в Ассоциации сексологов Российской Федерации с 2019 года.",
     "fact4": "В личной терапии с 2019 года."
   },
