--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,6 @@
 {
   "nav": {
-    "links": ["Обо мне", "Консультации", "Оплата", "Вопрос-ответ", "Тесты"]
+    "links": ["Обо мне", "Консультации", "Оплата", "Вопрос-ответ", "Тесты", "Отзывы"]
   },
 
   "intro": {
@@ -104,5 +104,9 @@
       "Сексуальный портрет",
       "Шкала сексуальных установок"
     ]
+  },
+
+  "reviews": {
+    "title": "Отзывы"
   }
 }
