--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,27 @@
 {
   "nav": {
-    "links": ["Обо мне", "Консультации", "Оплата", "Вопрос-ответ", "Тесты", "Отзывы"]
+    "links": [
+      {
+        "id": "About Me",
+        "title": "Обо мне"
+      },
+      {
+        "id": "Consultation",
+        "title": "Консультации"
+      },
+      {
+        "id": "Payment",
+        "title": "Оплата"
+      },
+      {
+        "id": "Q&A",
+        "title": "Вопрос-ответ"
+      },
+      {
+        "id": "Tests",
+        "title": "Тесты"
+      }
+    ]
   },
 
   "intro": {
