--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,7 +11,8 @@
 
   "modalCheck": {
     "default": {
-      "description": "The information on the website is not intended for visitors under the age of 18. Please confirm your age to access it. Are you 18 years old?",
+      "title": "Are you 18 years old?",
+      "description": "The information on the website is not intended for visitors under the age of 18. Please confirm your age to access it.",
       "yes": "Yes, I am 18 years old",
       "no": "No, I'm younger",
       "cookie": "This site uses cookies to improve your experience. By visiting this resource, you consent to their use."
