--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,27 @@
 {
   "nav": {
-    "links": ["Обо мне", "Консультации", "Оплата", "Вопрос-ответ", "Тесты"]
+    "links": [
+      {
+        "id": "About Me",
+        "title": "Обо мне"
+      },
+      {
+        "id": "Consultation",
+        "title": "Консультации"
+      },
+      {
+        "id": "Payment",
+        "title": "Оплата"
+      },
+      {
+        "id": "Q&A",
+        "title": "Вопрос-ответ"
+      },
+      {
+        "id": "Tests",
+        "title": "Тесты"
+      }
+    ]
   },
 
   "intro": {
@@ -105,5 +126,9 @@
       "Сексуальный портрет",
       "Шкала сексуальных установок"
     ]
+  },
+
+  "reviews": {
+    "title": "Отзывы"
   }
 }
