Fix styles for buttons

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -86,7 +86,7 @@
 
   "payment": {
     "title": "Payment",
-    "button": "Sign up",
+    "button": "Contact Me",
     "euroPrice": "30 EUR",
     "rubPrice": "3 000 RUB",
     "RSDPrice": "3 500 RSD",
